Fix z-index of Modals to be in front

--- a/app/assets/stylesheets/components/_modal.css.sass
+++ b/app/assets/stylesheets/components/_modal.css.sass
@@ -5,7 +5,7 @@
   top: -100%
   width: 100%
   height: 100%
-  z-index: 2000
+  z-index: 100000
   position: fixed
   overflow-x: auto
   overflow-y: scroll
